# cyan_hwcam

./: .gitignore  CMakeLists.txt  config.h.in  cyanConfigVersion.cmake.in  cyan_hwcamConfig.cmake.in
include/: hwcam.h
include/cyan/hwcam/: hwcam.h  imageformats.h  modes.h  pixelformats.h  plugin.h
include/cyan_hwcam/: hwcam.h  modes.h  plugin.h
plugins/: CMakeLists.txt
plugins/cam_dummy/: CMakeLists.txt  dummy.c
plugins/cam_dummy/test/: CMakeLists.txt  cam_dummy.c
plugins/cam_dummy/test/reference_output/: output.txt
plugins/cam_ffmpeg/: CMakeLists.txt
plugins/cam_gstreamer/: CMakeLists.txt
plugins/cam_stillimage/: CMakeLists.txt  stillimage.c
plugins/cam_stillimage/test/: CMakeLists.txt  cam_still.c
plugins/cam_v4l2/: CMakeLists.txt
plugins/cam_v4l2/tuto/: capturev4l2.c  test
plugins/hwcam_ffmpeg/: CMakeLists.txt
plugins/hwcam_gstreamer/: CMakeLists.txt
plugins/hwcam_stillimage/: CMakeLists.txt
plugins/hwcam_v4l2/: CMakeLists.txt
src/: hwcam.c  imqueue.c  imqueue.h  pixelformat.c
src/tuto/: capturev4l2.c
